<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/darken">

    <TextView
        android:id="@+id/tvPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/editor_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUrl"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/song_url"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toStartOf="@+id/btnCopyURL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPageTitle"
        app:layout_constraintWidth_max="488dp" />

    <Button
        android:id="@+id/btnCopyURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/copy_url_button"
        app:icon="@drawable/ic_copy_url"
        app:layout_constraintBottom_toBottomOf="@+id/etUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etUrl" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/song_title"

        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@+id/btnCopyURL"
        app:layout_constraintStart_toStartOf="@+id/etUrl"
        app:layout_constraintTop_toBottomOf="@id/etUrl" />

    <EditText
        android:id="@+id/etAuthor"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/song_author"
        android:importantForAutofill="no"

        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@id/etTitle"
        app:layout_constraintStart_toStartOf="@id/etTitle"
        app:layout_constraintTop_toBottomOf="@id/etTitle" />

    <EditText
        android:id="@+id/etAlbum"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"


        android:ems="10"
        android:hint="@string/song_album"
        android:importantForAutofill="no"

        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@id/etAuthor"
        app:layout_constraintStart_toStartOf="@id/etAuthor"
        app:layout_constraintTop_toBottomOf="@id/etAuthor" />

    <EditText
        android:id="@+id/etTags"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"


        android:ems="10"
        android:hint="@string/song_tags"
        android:importantForAutofill="no"

        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="@id/etAlbum"
        app:layout_constraintStart_toStartOf="@id/etAlbum"
        app:layout_constraintTop_toBottomOf="@id/etAlbum" />

    <Button
        android:id="@+id/btnEditSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/edit_button"
        app:icon="@drawable/ic_download"
        app:layout_constraintEnd_toEndOf="@id/btnCancelEditSong"
        app:layout_constraintStart_toStartOf="@id/btnCancelEditSong"
        app:layout_constraintTop_toBottomOf="@id/btnCancelEditSong" />

    <Button
        android:id="@+id/btnCancelEditSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel_edit_button"
        app:icon="@drawable/ic_undo_edit"
        app:layout_constraintEnd_toEndOf="@id/etTags"
        app:layout_constraintStart_toStartOf="@id/etTags"
        app:layout_constraintTop_toBottomOf="@id/etTags" />

    <Button
        android:id="@+id/btnDeleteSong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/delete_button"
        app:icon="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!-- android:background="@color/danger" -->


</androidx.constraintlayout.widget.ConstraintLayout>