<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/controlRack"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:background="?attr/colorSurface"
    android:orientation="horizontal">


    <LinearLayout
        android:id="@+id/infoBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.media3.ui.DefaultTimeBar
            android:id="@+id/exo_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"

            android:layout_weight="1"

            app:bar_height="15dp"
            app:buffered_color="@color/player_progress_bg"
            app:played_color="@color/player_progress_fg"
            app:scrubber_disabled_size="0dp"

            app:scrubber_dragged_size="0dp"
            app:scrubber_enabled_size="0dp"
            app:unplayed_color="@color/player_progress_bg" />

        <View
            android:id="@+id/bar_divider"
            android:layout_width="1dp"
            android:layout_height="30dp"

            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="00:00" />

        <ImageButton
            android:id="@+id/exo_play_mode"
            style="@style/RealSmallButton"

            android:layout_width="82dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/controls_play_mode"
            android:src="@drawable/ic_shuffle_off" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBar">

        <ImageButton
            android:id="@+id/exo_prev"
            style="@style/RealButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/controls_prev"
            android:src="@drawable/ic_last_song" />

        <ImageButton
            android:id="@+id/exo_play_pause"
            style="@style/RealButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/controls_play_pause"
            android:src="@drawable/ic_play_song" />

        <ImageButton
            android:id="@+id/exo_next"
            style="@style/RealButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/controls_next"
            android:src="@drawable/ic_next_song" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>